@@ -13,6 +13,7 @@
 	* refactored the group gateway
 	* moved the include for the localization manager into the community application controller
 	* added a TS viewhelper to retrieve TS values
+	* added a link viewhelper to create links on the fly
 
 2008-09-30 Ingo Renner  <ingo@typo3.org>
 
